# cuLinblad

./: CMakeLists.txt  README.md  check_in_1_demo.py  main.cpp  qutip_baseline.py
cpp/include/culindblad/: backend.hpp  backend_cpu_reference.hpp  batch_evolution.hpp  batched_grouped_apply.hpp  batched_grouped_layout.hpp  cpu_reference.hpp  cuda_elementwise.hpp  cuda_grouped_layout.hpp  cutensor_contraction_desc.hpp  cutensor_dissipator.hpp  cutensor_execute.hpp  cutensor_executor.hpp  cutensor_executor_cache.hpp  cutensor_operation_desc.hpp  cutensor_ops.hpp  cutensor_plan.hpp  cutensor_tensor_descs.hpp  grouped_contraction_backend.hpp  grouped_state_layout.hpp  k_site_block_map.hpp  k_site_contraction_api.hpp  k_site_contraction_desc.hpp  k_site_grouped_apply.hpp  k_site_index_roles.hpp  k_site_operator_embed.hpp  k_site_plan.hpp  k_site_tensor_view.hpp  liouvillian_terms.hpp  local_apply.hpp  local_dims.hpp  local_operator_embed.hpp  local_operator_utils.hpp  local_term_utils.hpp  model.hpp  operator_term.hpp  petsc_apply.hpp  petsc_cuda_apply.hpp  petsc_cuda_ts_rhs.hpp  petsc_cuda_ts_smoke.hpp  petsc_cuda_vec_utils.hpp  (+12 more)
cpp/src/apps/: cli_main.cpp
cpp/src/backends/cpu/: apply_terms_cpu.cpp  backend_cpu_reference.cpp
cpp/src/backends/cuda/: batched_grouped_apply.cpp  cuda_elementwise.cu  cuda_grouped_layout.cu  cutensor_contraction_desc.cpp  cutensor_dissipator.cpp  cutensor_execute.cpp  cutensor_executor.cpp  cutensor_executor_cache.cpp  cutensor_operation_desc.cpp  cutensor_ops.cpp  cutensor_plan.cpp  cutensor_tensor_descs.cpp  pinned_host_buffer.cpp
cpp/src/core/: batch_evolution.cpp  batched_grouped_layout.cpp  grouped_contraction_backend.cpp  grouped_state_layout.cpp  k_site_block_map.cpp  k_site_contraction_api.cpp  k_site_contraction_desc.cpp  k_site_grouped_apply.cpp  k_site_index_roles.cpp  k_site_operator_embed.cpp  k_site_plan.cpp  k_site_tensor_view.cpp  liouvillian_terms.cpp  local_apply.cpp  local_operator_embed.cpp  local_operator_utils.cpp  local_term_utils.cpp  time_dependence.cpp  time_dependent_term.cpp  transmon_chain_benchmark.cpp  two_site_operator_embed.cpp
cpp/src/petsc/: petsc_apply.cpp  petsc_cuda_apply.cpp  petsc_cuda_ts_rhs.cpp  petsc_cuda_ts_smoke.cpp  petsc_cuda_vec_utils.cpp  petsc_shell.cpp  petsc_ts_rhs.cpp  petsc_ts_smoke.cpp
profiling/: 2026-04-01-large-target.md  2026-04-03-qutrit-boundary.md  2026-04-03-qutrit-next-bottleneck.md  2026-04-03-qutrit-site-layout-executor-reuse.md
